fix: normalize label /form spacing (#686)

--- a/src/components/modals/ActionCreatorEditor.css
+++ b/src/components/modals/ActionCreatorEditor.css
@@ -19,3 +19,12 @@
     display: grid;
     grid-gap: 1em;
 }
+
+.cl-action-creator-form {
+    display: grid;
+    grid-gap: 0.5em;
+}
+
+.cl-actioncreator-form-section {
+    margin-top: 1em;
+}
