--- a/src/components/modals/EntityCreatorEditor.css
+++ b/src/components/modals/EntityCreatorEditor.css
@@ -1,3 +1,8 @@
-.cl-entity-creator-checkbox {
-    margin-bottom: 0.6em;
+.cl-entity-creator-checkboxes {
+    margin-top: 1em;
+}
+
+.cl-entity-creator-form {
+    display: grid;
+    grid-gap: 0.5em;
 }
